<resources>
    <string name="app_name">Cart Assist</string>
    <string name="Login">Login</string>
    <string name="request">Request a Cart</string>
    <string name="noAccount">No account yet?</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="reenter">confirm password</string>
    <string name="navhead">Navigation Header</string>
    <string name="ci">Car Info</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="carcolor">Color</string>
    <string name="parkarea">Parking Area</string>
    <string name="create">Create Account</string>
    <string name="fp">Forgot Password</string>
    <string name="rp">Reset Password</string>
    <string name="ac">Add Car</string>
    <string name="instruction">Input your car info so the attendant can find your car</string>
    <string-array name="login_array">
        <item>Customer</item>
        <item>Attendant</item>
        <item>Manager</item>
    </string-array>

</resources>