<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ImageView
        android:id="@+id/navHeader4"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/navhead"
        app:layout_constraintBottom_toTopOf="@+id/editTextEnterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_bg" />

    <EditText
        android:id="@+id/editTextEnterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextReEnterPass"
        app:layout_constraintStart_toStartOf="@+id/editTextEnterEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterEmail" />

    <EditText
        android:id="@+id/editTextReEnterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reenter"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/editTextEnterPass"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterPass" />

    <EditText
        android:id="@+id/editTextEnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextEnterPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navHeader4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/ci"
        android:textColor="@color/rqtBtnBg"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCarMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReEnterPass" />

    <EditText
        android:id="@+id/editTextCarMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/make"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextCarModel"
        app:layout_constraintStart_toStartOf="@+id/editTextReEnterPass"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextCarColor"
        app:layout_constraintStart_toStartOf="@+id/editTextCarMake"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarMake" />

    <EditText
        android:id="@+id/editTextCarColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/carcolor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/editTextCarModel"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarModel" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="58dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextCarColor"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarColor" />

</androidx.constraintlayout.widget.ConstraintLayout>